Fixing clippys info design and functionality

--- a/src/css/story/clippy.styl
+++ b/src/css/story/clippy.styl
@@ -52,6 +52,45 @@
     width 100%
     height 100%
 
+  &-info-overall
+    width 75%
+    max-width 25rem
+    height 60%
+    position relative
+
+  .close-info
+    //color $white
+    height 30px
+    width 30px
+    background-color: $mid-purple
+    border: 2px solid $gray-darkest
+    border-radius 50%
+    position absolute
+    display flex
+    align-items: center;
+    justify-content: center
+    transition 300ms ease
+    pointer-events: all
+    cursor pointer
+    z-index: 20
+    top -15px
+    left -15px
+    opacity 0
+    transition 300ms opacity
+
+    &.active
+      opacity 1
+      transition 300ms
+
+    svg
+      transform scale(0.8)
+      color $white
+
+    &:hover
+      background-color $secondary
+      transition 300ms ease
+
+
   .info-img
     max-width 250px
     margin 0 auto
@@ -61,15 +100,17 @@
     // height 550px
     background-color: $light-purple
     display flex
-    padding 1rem
+    //padding 1rem
     right 5%
+    max-height 100%
     //justify-content center
     align-items flex-start
     flex-direction column
-    width 75%
-    max-width 25rem
-    max-height 60%
+    // width 75%
+    // max-width 25rem
+    // max-height 60%
     overflow hidden
+    position absolute
     // top 0
     // left 0
     // transform translate(50%, 50%)
@@ -80,22 +121,7 @@
     opacity 0
     visibility hidden
 
-    &-arrow
-      border-style: solid;
-      position: absolute;
-      border-color: $mid-purple transparent transparent transparent;
-      border-width: 8px 8px 0px 8px;
-      bottom: -8px;
-      left: 67px
 
-      &:after
-        border-color: $light-purple transparent transparent transparent;
-        border-style: solid;
-        border-width: 7px 7px 0px 7px;
-        bottom: 1px;
-        content: "";
-        position: absolute;
-        left: -7px;
 
     // &:after
     //   content: '';
@@ -116,31 +142,34 @@
       opacity 1
       transition 300ms ease
       pointer-events: all
-
-    .close-info
-      //color $white
-      height 30px
-      width 30px
-      background-color: $mid-purple
-      border: 2px solid $gray-darkest
-      top 5px
-      left 5px
-      border-radius 50%
       position absolute
-      display flex
-      align-items: center;
-      justify-content: center
-      transition 300ms ease
-      pointer-events: all
-      cursor pointer
 
-      svg
-        transform scale(0.8)
-        color $white
+    &-arrow
+      border-style: solid;
+      position: absolute;
+      border-color: $mid-purple transparent transparent transparent;
+      border-width: 15px 15px 0px 15px;
+      bottom: -14px;
+      right: 70px
+      z-index: 500
+      opacity 0
+      transition 300ms opacity
 
-      &:hover
-        background-color $secondary
-        transition 300ms ease
+      &.active
+        opacity 1
+        transition 300ms
+
+      &:after
+        border-color: $light-purple transparent transparent transparent;
+        border-style: solid;
+        border-width: 13px 13px 0px 13px;
+        bottom: 3px;
+        content: "";
+        position: absolute;
+        right: -13px;
+
+    .info-content
+      padding 0 1rem
 
     .info-title
       text-transform: capitalize;
@@ -196,6 +225,7 @@
 
     &.active
       opacity 0.6
+      pointer-events: all
 
   &-speech
     background-color $light-purple
